# machine-learning-with-rust

./: .gitignore  Cargo.toml  README.md
adaboost-stump/: .gitignore  Cargo.toml  README.md
adaboost-stump/data/: newtest-faces.txt  rotated-faces.txt  test-faces.txt  test-low-faces.txt
adaboost-stump/data/validation/: faces.txt
adaboost-stump/src/: haar_like_feature.rs  integral_image.rs  load.rs  main.rs  playground.rs  prediction_ensemble.rs  prediction_hypothesis.rs  shared.rs  train.rs  trash.rs  validate.rs  works.rs
neural-networks/guide/: network.py
neural-networks/src/: load.rs  range.rs
src/: main.rs  shared.rs
